Add database URI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 server.servlet.context-path=/dal
 
 # congif database connection
-spring.data.mongodb.database=wemeet_db
-spring.data.mongodb.host=localhost
+spring.data.mongodb.database=dal_db
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.ixeky8x.mongodb.net/test
 spring.data.mongodb.port=27017
