--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ java-build:
 
 docker-build:
   image: docker:20.10.16
-  stage: build
+  stage: deploy
   needs: ["java-build"]
   services:
     - docker:20.10.16-dind
