--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,10 @@ java-build:
 
 docker-build:
   image: docker:20.10.16
+  DOCKER_HOST: tcp://docker:2375 
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+
   stage: deploy
   needs: ["java-build"]
   services:
