--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,9 @@ cache:
   paths:
     - .m2/repository
 
-test:
+unit-tests:
   stage: test
+  needs: ["java-build"]
   script:
     - 'mvn $MAVEN_CLI_OPTS test'
 
@@ -32,7 +33,7 @@ docker-build:
     DOCKER_TLS_CERTDIR: ""
 
   stage: deploy
-  needs: ["java-build"]
+  needs: ["unit-tests"]
   services:
     - docker:20.10.16-dind
   before_script:
