--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,14 +70,14 @@ deploy:
   stage: deploy
   needs: ["docker-build-preprod"]
   variables:
-    PREPROD_PRIVATE_KEY: $PREPROD_PRIVATE_KEY
+    PREPROD_PRIVATE_KEY: ${PREPROD_PRIVATE_KEY}
   rules:
     - if: '$CI_COMMIT_BRANCH == "add-build-task"'
       when: always
   script:
-    - chmod 600 "${PREPROD_PRIVATE_KEY}"
+    - chmod 600 $PREPROD_PRIVATE_KEY
     - apk update && apk add openssh-client
-    - ssh -i "${PREPROD_PRIVATE_KEY}" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker login -u '$CI_REGISTRY_USER' -p '$CI_REGISTRY_PASSWORD' $CI_REGISTRY"
-    - ssh -i "${PREPROD_PRIVATE_KEY}" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker pull $CI_REGISTRY_IMAGE:latest"
-    - ssh -i "${PREPROD_PRIVATE_KEY}" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker container rm -f $CI_REGISTRY_IMAGE || true"
-    - ssh -i "${PREPROD_PRIVATE_KEY}" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker run -d -p 8080:8080 --name dal-banque $CI_REGISTRY_IMAGE:latest"
+    - ssh -i "$PREPROD_PRIVATE_KEY" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker login -u '$CI_REGISTRY_USER' -p '$CI_REGISTRY_PASSWORD' $CI_REGISTRY"
+    - ssh -i "$PREPROD_PRIVATE_KEY" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker pull $CI_REGISTRY_IMAGE:latest"
+    - ssh -i "$PREPROD_PRIVATE_KEY" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker container rm -f $CI_REGISTRY_IMAGE || true"
+    - ssh -i "$PREPROD_PRIVATE_KEY" -o StrictHostKeyChecking=no "${PREPROD_USER}@$PREPROD_IP}" "docker run -d -p 8080:8080 --name dal-banque $CI_REGISTRY_IMAGE:latest"
