--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ java-package:
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker login -u '$CI_REGISTRY_USER' -p '$CI_REGISTRY_PASSWORD' $CI_REGISTRY"
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker pull $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME:latest"
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker container rm -f $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME || true"
-    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker run -d -p 8080:8080 --name dal-banque $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME:latest"
+    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker run -d -p 8080:8080 --name $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME:latest"
 
 docker-build-to-staging:
   extends: .docker-build
