--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,26 +85,26 @@ java-package:
 docker-build-to-staging:
   extends: .docker-build
   rules:
-     - if: '$CI_COMMIT_BRANCH == "add-build-task"' # or any other condition
+     - if: '$CI_COMMIT_BRANCH == "master"' # or any other condition
   environment: "staging"
 
 docker-build-to-production:
   extends: .docker-build
   rules:
-     - if: '$CI_COMMIT_BRANCH == "production"'
+     - if: '$CI_COMMIT_BRANCH == "add-build-task"'
   environment: "production"
 
 deploy-to-staging:
   extends: .deploy
   needs: ["docker-build-to-staging"]
   rules:
-     - if: '$CI_COMMIT_BRANCH == "add-build-task"' # or any other condition
+     - if: '$CI_COMMIT_BRANCH == "master"' # or any other condition
   environment: "staging"
 
 deploy-to-production:
   extends: .deploy
   needs: ["docker-build-to-production"]
   rules:
-     - if: '$CI_COMMIT_BRANCH == "production"'
+     - if: '$CI_COMMIT_BRANCH == "add-build-task"'
        when: manual
   environment: "production"
