--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deploy-to-staging:
   extends: .deploy
   needs: ["docker-build-to-staging"]
   rules:
-     - if: '$CI_COMMIT_BRANCH == "master"' # or any other condition
+     - if: '$CI_COMMIT_BRANCH == "master" || '$CI_COMMIT_BRANCH == "deploy-mongo-database"'
   environment: "staging"
 
 deploy-to-production:
