Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ java-package:
   stage: deploy
   needs: ["unit-tests"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production"
+    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production" || $CI_COMMIT_BRANCH == "deploy-mongo-database"
   script:
     - find . -name "*.class" -exec touch {} \+
     - mvn $MAVEN_CLI_OPTS package -DskipTests=true
