--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,9 +78,9 @@ java-package:
     - chmod 644 ~/.ssh/known_hosts
 
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker login -u '$CI_REGISTRY_USER' -p '$CI_REGISTRY_PASSWORD' $CI_REGISTRY"
-    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker compose down"
-    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker compose build"
-    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker compose -f docker-compose.yml -f docker-compose.$CI_ENVIRONMENT_NAME.yml up -d"
+    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker-compose down"
+    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker-compose build"
+    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker-compose -f docker-compose.yml -f docker-compose.$CI_ENVIRONMENT_NAME.yml up -d"
 
 docker-build-to-staging:
   extends: .docker-build
