--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ java-package:
   image: alpine:latest
   stage: deploy
   before_script:
-    - apk update && apk add openssh-client && apk add docker-compose
+    - apk update && apk add openssh-client && apk add docker && apk add docker-compose
   script:
     - eval $(ssh-agent -s)
     - chmod 600 $PRIVATE_KEY
