use docker-cli to run docker compose

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,8 +71,7 @@ java-package:
     - apk update
     - apk add --no-cache openssh-client
     - apk add --no-cache docker
-    - apk add --no-cache python3
-    - pip3 install docker-compose
+    - apk add --no-cache docker-cli-compose
   script:
     - eval $(ssh-agent -s)
     - chmod 600 $PRIVATE_KEY
