--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,4 +1,6 @@
-spring-server:
+version: "3.8"
+services:
+    spring-server:
         image: benjil/dal-banque-production:latest
         ports:
             - "8080:8080"
