--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,9 +1,16 @@
 version: "3.8"
 services:
     spring-server:
-        image: benjil/dal-banque-production:latest
-        restart: always
+        image: benjil/dal-banque-staging:latest
         ports:
             - "8080:8080"
         depends_on:
             - mongo_db
+        restart: always
+
+    mongo_db:
+        restart: always
+        image: mongo:6.0.2
+        ports:
+            - "27017:27017"
+        command: ["mongod", "--port", "27017"]
