--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -6,11 +6,11 @@ services:
             - "8080:8080"
         depends_on:
             - mongo_db
-        restart: always
 
     mongo_db:
-        restart: always
         image: mongo:6.0.2
+        volumes:
+            - './data:/data/db'
         ports:
             - "27017:27017"
         command: ["mongod", "--port", "27017"]
