--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ java-package:
   stage: deploy
   needs: ["unit-tests"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production" || $CI_COMMIT_BRANCH == "deploy-mongo-database"
+    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production"
   script:
     - find . -name "*.class" -exec touch {} \+
     - mvn $MAVEN_CLI_OPTS package -DskipTests=true
@@ -83,12 +83,12 @@ java-package:
 
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker login -u '$CI_REGISTRY_USER' -p '$CI_REGISTRY_PASSWORD' $CI_REGISTRY"
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "cd /home/$SERVER_USER ; docker-compose down"
-    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker-compose -f /home/$SERVER_USER/docker-compose.yml -f /home/$SERVER_USER/docker-compose.$CI_ENVIRONMENT_NAME.yml up -d"
+    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker-compose -f /home/$SERVER_USER/docker-compose.$CI_ENVIRONMENT_NAME.yml up -d"
 
 docker-build-to-staging:
   extends: .docker-build
   rules:
-     - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "deploy-mongo-database"'
+     - if: '$CI_COMMIT_BRANCH == "master"'
   environment: "staging"
 
 docker-build-to-production:
@@ -101,7 +101,7 @@ deploy-to-staging:
   extends: .deploy
   needs: ["docker-build-to-staging"]
   rules:
-     - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "deploy-mongo-database"'
+     - if: '$CI_COMMIT_BRANCH == "master"'
   environment: "staging"
 
 deploy-to-production:
