test fixing hostnames on containers

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,11 +1,15 @@
 version: "3.8"
 services:
     spring-server:
-        image: benjil/dal-banque-production:latest
+        build:
+            image: benjil/dal-banque-staging:latest
         ports:
             - "8080:8080"
         depends_on:
             - mongo_db
+        hostname: spring-server
+        links:
+            - mongo
 
     mongo_db:
         image: mongo:6.0.2
@@ -13,3 +17,4 @@ services:
             - './data:/data/db'
         ports:
             - "27017:27017"
+        hostname: mongo
