--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ java-package:
   stage: deploy
   needs: ["unit-tests"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production"
+    - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production" || $CI_COMMIT_BRANCH == "connect-db-and-server"
   script:
     - find . -name "*.class" -exec touch {} \+
     - mvn $MAVEN_CLI_OPTS package -DskipTests=true
@@ -88,7 +88,7 @@ java-package:
 docker-build-to-staging:
   extends: .docker-build
   rules:
-     - if: '$CI_COMMIT_BRANCH == "master"'
+     - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "connect-db-and-server"'
   environment: "staging"
 
 docker-build-to-production:
@@ -101,7 +101,7 @@ deploy-to-staging:
   extends: .deploy
   needs: ["docker-build-to-staging"]
   rules:
-     - if: '$CI_COMMIT_BRANCH == "master"'
+     - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "connect-db-and-server"'
   environment: "staging"
 
 deploy-to-production:
