link mongodb to server container

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,9 +6,8 @@ services:
             - "8080:8080"
         depends_on:
             - mongo_db
-        hostname: spring-server
         links:
-            - mongo_db
+            - mongo_db:mongo
 
     mongo_db:
         image: mongo:6.0.2
@@ -16,4 +15,3 @@ services:
             - './data:/data/db'
         ports:
             - "27017:27017"
-        hostname: mongo
