--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.servlet.context-path=/dal
 
 # congif database connection
 spring.data.mongodb.database=dal_db
-spring.data.mongodb.host=mongohost.docker.internal
+spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
