--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # config context path
 server.servlet.context-path=/dal
 
-# congif database connection
+# config database connection
 spring.data.mongodb.database=dal_db
 spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
