--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.servlet.context-path=/dal
 
 # congif database connection
 spring.data.mongodb.database=dal_db
-spring.data.mongodb.host=mongo
+# spring.data.mongodb.host=mongo
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.ixeky8x.mongodb.net/test
 spring.data.mongodb.port=27017
