Edit pom description

--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,11 @@
 	<artifactId>banque</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>banque</name>
-	<description>L&apos;API de la banque</description>
+	<description>API de la banque</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
