enlever /dal du requette

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # config context path
-server.servlet.context-path=/dal
+# server.servlet.context-path=/dal
 
 # config database connection
 spring.data.mongodb.database=dal_db
