--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ unit-tests:
   script:
     - docker run -d --name mongo -p 27017:27017 mongo:6.0.2 mongod --bind_ip_all
     - find . -name "*.class" -exec touch {} \+
-    - 'mvn $MAVEN_CLI_OPTS test'
+    - '/usr/lib/mvn $MAVEN_CLI_OPTS test'
   artifacts:
     when: always
     reports:
