run mvn test with the correct path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ unit-tests:
     - apk add --no-cache openjdk17-jdk
     - wget https://archive.apache.org/dist/maven/maven-3/3.8.6/binaries/apache-maven-3.8.6-bin.tar.gz && tar -zxvf apache-maven-3.8.6-bin.tar.gz && rm apache-maven-3.8.6-bin.tar.gz && mv apache-maven-3.8.6 /usr/lib/mvn
   script:
-    - docker run -d --name mongo -p 27017:27017 mongo:6.0.2 mongod --bind_ip_all
+    - docker run -d --name mongo -p 27017:27017 mongo:6.0.2
     - find . -name "*.class" -exec touch {} \+
     - '/usr/lib/mvn $MAVEN_CLI_OPTS test'
   artifacts:
