--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ java-compile:
       - target/  
 
 unit-tests:
-  image: docker:20.10.16
+  image: docker:latest
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
@@ -34,7 +34,7 @@ unit-tests:
     - apk add --no-cache openjdk17-jdk
     - wget https://archive.apache.org/dist/maven/maven-3/3.8.6/binaries/apache-maven-3.8.6-bin.tar.gz && tar -zxvf apache-maven-3.8.6-bin.tar.gz && rm apache-maven-3.8.6-bin.tar.gz && mv apache-maven-3.8.6 /usr/lib/mvn
   script:
-    - docker run -d -p 27017:27017 mongo:6.0.2 mongod --bind_ip_all
+    - docker run -d -p 27017:27017 --name mongo mongo:6.0.2 mongod --bind_ip_all
     - find . -name "*.class" -exec touch {} \+
     - '/usr/lib/mvn $MAVEN_CLI_OPTS test'
   artifacts:
