--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,13 +20,13 @@ java-compile:
       - target/  
 
 unit-tests:
-  image: docker:latest
+  image: docker:19.03.15
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
 
   services:
-    - docker:20.10.16-dind
+    - docker:19.03.15-dind
   stage: test
   needs: ["java-compile"]
   before_script:
