--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ unit-tests:
   needs: ["java-compile"]
   before_script:
     - apk update
-    - apk add --no-cache openjdk17
+    - apk add --no-cache openjdk17-jdk --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
     - wget https://archive.apache.org/dist/maven/maven-3/3.8.6/binaries/apache-maven-3.8.6-bin.tar.gz && tar -zxvf apache-maven-3.8.6-bin.tar.gz && rm apache-maven-3.8.6-bin.tar.gz && mv apache-maven-3.8.6 /usr/lib/mvn
   script:
     - docker run -d -p 27017:27017 --name mongo mongo:6.0.2 mongod --bind_ip_all
