--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ stages:
   - clean
   - build
   - test
+  - package
+  - build-image
   - deploy
 
 cache:
@@ -51,7 +53,7 @@ unit-tests:
         - target/failsafe-reports/TEST-*.xml
 
 java-package:
-  stage: deploy
+  stage: package
   needs: ["unit-tests"]
   rules:
     - if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "production"
@@ -70,7 +72,7 @@ java-package:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
 
-  stage: deploy
+  stage: build-image
   needs: ["java-package"]
   services:
     - docker:20.10.16-dind
@@ -85,6 +87,7 @@ java-package:
 .deploy:
   image: alpine:latest
   stage: deploy
+  needs: ["build-image"]
   before_script:
     - apk update
     - apk add --no-cache openssh-client
