--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ java-package:
 
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker login -u '$CI_REGISTRY_USER' -p '$CI_REGISTRY_PASSWORD' $CI_REGISTRY"
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "cd /home/$SERVER_USER ; docker-compose down"
-    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "cd /home/$SERVER_USER ; docker image rm $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME:latest"
+    - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "cd /home/$SERVER_USER ; docker image rm $CI_REGISTRY_IMAGE-$CI_ENVIRONMENT_NAME:latest &> /dev/null || true"
     - ssh -i "$PRIVATE_KEY" -o StrictHostKeyChecking=no "${SERVER_USER}@$SERVER_IP" "docker-compose -f /home/$SERVER_USER/docker-compose.$CI_ENVIRONMENT_NAME.yml up -d"
 
 docker-build-to-staging:
